New nodes near cursor